# chutes-miner

./: .dockerignore  .gitignore  DEVELOPER.md  Dockerfile  Makefile  README.md  audit_exporter.py  gepetto.py  pyproject.toml
.github/workflows/: ruff-check.yml
ansible/: extras.yml  inventory.yml  site.yml  ufw.yml
ansible/k3s/: MIGRATE.md  README.md  ansible.cfg  inventory.yml
ansible/k3s/group_vars/: all.yml
ansible/k3s/handlers/: main.yml
ansible/k3s/playbooks/: migrate.yml  reboot.yml  reset.yml  site.yml  upgrade-k3s.yml
ansible/k3s/vars/: migrate.yml
ansible/karmada/: .ansible-lint  MIGRATE.md  README.md  ansible.cfg  inventory-sample.yml  inventory.yml
ansible/karmada/group_vars/: all.yml  control.yml
ansible/karmada/handlers/: main.yml
ansible/karmada/playbooks/: migrate.yml  reset.yml  site.yml  upgrade-k3s.yml  upgrade-nvidia.yml  upgrade.yml
ansible/karmada/vars/: migrate.yml
ansible/tasks/: amd_sev.yaml  amd_tee.yaml  enable_gpu_cc.yaml  microk8s.yaml  non_tee_gpu_setup.yaml  prerequisites.yaml  set_gpu_cc_mode.yaml  set_gpu_mode.yaml
api/: k8s.py  main.py
api/config/: __init__.py
api/deployment/: router.py
api/k8s/: __init__.py  constants.py  operator.py  response.py  util.py
api/k8s/karmada/: models.py
api/registry/: main.py
api/server/: router.py  util.py
charts/: values.yaml
charts/chutes-miner/: values.yaml
charts/chutes-miner-gpu/: values.yaml
charts/chutes-miner-gpu/templates/: _helpers.tpl  agent.deploy.yaml  agent.rbac.yaml  agent.svc.yaml  api.deploy.yaml  api.rbac.yaml  api.svc.yaml  chutes.pp.yaml  chutes.rbac.yaml  cluster-proxy.rbac.yaml  failed-chute-cleanup-cronjob.yaml  karmada-search.yaml  miner.rbac.yml  registry-cm.yaml  registry-daemonset.yaml  registry-svc.yaml  registry.pp.yaml
charts/chutes-miner/templates/: _helpers.tpl  api-cr.yaml  api-deployment.yaml  api.rbac.yaml  audit-export-cronjob.yaml  audit-exporter.rbac.yaml  chutes-np.yaml  cluster-proxy.rbac.yml  gepetto-deployment.yaml  monitor.deploy.yaml  monitor.svc.yaml  redis-deployment.yaml  search.yml
charts/chutes-monitoring/: Chart.yaml  values.yaml
charts/chutes-monitoring/dashboards/: http-tcp-monitoring-dashboard.json  k8s-summary.json
charts/chutes-monitoring/templates/: grafana-dashboards.cm.yaml  grafana.pp.yaml  kube-state-metrics.pp.yaml  node-exporter.pp.yaml  prometheus.cm.yaml  prometheus.deploy.yaml  prometheus.netpol.yaml  prometheus.pp.yaml  prometheus.sa.yaml  prometheus.secret.yaml  prometheus.svc.yaml
charts/templates/: one-time-passwords.yaml
cli/: setup.py
cli/src/chutes_miner/: cli.py
docker/: docker-compose.yml
docker/chutes-agent/: Dockerfile  docker-compose.base.yaml  image.conf
docker/chutes-cacheclean/: Dockerfile  docker-compose.yaml  image.conf
docker/chutes-miner/: Dockerfile  docker-compose.yaml  image.conf
docker/chutes-miner-gpu/: Dockerfile  image.conf
docker/chutes-monitor/: Dockerfile  docker-compose.yaml  image.conf
docker/chutes-registry/: Dockerfile  image.conf
docker/graval-bootstrap/: Dockerfile  image.conf
graval_bootstrap/: pyproject.toml
makefiles/: development.mk  help.mk  images.mk  lint.mk  local.mk  test.mk
registry/: main.py
scripts/: seed.py  seed.sh  test.sh
src/chutes-agent/: pyproject.toml
src/chutes-agent/chutes_agent/: client.py  collector.py  config.py  constants.py  monitor.py
src/chutes-agent/chutes_agent/api/: main.py
src/chutes-agent/chutes_agent/api/config/: router.py
src/chutes-agent/chutes_agent/api/monitor/: models.py  router.py
src/chutes-agent/scripts/: test.sh
src/chutes-common/: pyproject.toml
src/chutes-common/chutes_common/: auth.py  constants.py  exceptions.py  k8s.py  redis.py  settings.py
src/chutes-common/chutes_common/monitoring/: messages.py  models.py  requests.py
src/chutes-common/chutes_common/schemas/: chute.py  deployment.py  gpu.py  orms.py  server.py
src/chutes-miner/: pyproject.toml
src/chutes-miner-cli/: pyproject.toml
src/chutes-miner-cli/chutes_miner_cli/: cli.py  util.py
src/chutes-miner-gpu/: pyproject.toml
src/chutes-miner-gpu/chutes_miner_gpu/api/: main.py  settings.py
src/chutes-miner-gpu/chutes_miner_gpu/api/config/: router.py
src/chutes-miner-gpu/scripts/: test.sh
src/chutes-miner/chutes_miner/: audit_exporter.py  gepetto.py
src/chutes-monitor/: pyproject.toml
src/chutes-monitor/chutes_monitor/: cluster_monitor.py  config.py  exceptions.py  settings.py
src/chutes-monitor/scripts/: lint.sh  test.sh
src/chutes-registry/: pyproject.toml
src/chutes-registry/chutes_registry/: main.py
src/chutes-registry/chutes_registry/api/registry/: router.py
src/graval-bootstrap/: pyproject.toml
tests/: conftest.py
tests/api/: test_deployment_api.py  test_k8s.py  test_k8s_karmada.py  test_k8s_microk8s.py  test_server_utils.py
tests/chutes-agent/: conftest.py
tests/chutes-agent/fixtures/: agent_fixtures.py  client_fixtures.py  http_fixtures.py  k8s_fixtures.py  settings_fixtures.py
tests/chutes-agent/integration/: test_agent.py
tests/chutes-agent/unit/: test_agent_config.py  test_collector.py  test_controller_client.py  test_monitor.py
tests/chutes-common/unit/: test_redis.py
tests/chutes-miner/: conftest.py  test_deployment_api.py  test_k8s_k3s.py  test_k8s_karmada.py  test_k8s_microk8s.py  test_server_utils.py
tests/chutes-miner-cli/: conftest.py  test_purge_deployments.py
tests/chutes-miner-cli/fixtures/: api_fixtures.py  cli_fixtures.py
tests/chutes-miner-gpu/api/: test_config.py
tests/chutes-miner/fixtures/: db_fixtures.py  k8s_fixtures.py  redis_fixutres.py
tests/chutes-miner/k8s/: test_client.py  test_config.py
tests/chutes-monitor/: conftest.py
tests/chutes-monitor/fixtures/: db.py  health_checker.py  k8s.py  monitor.py  redis.py  requests.py  router.py
tests/chutes-monitor/integration/: test_chutes_monitor.py
tests/chutes-monitor/unit/: test_cluster_monitor.py  test_health_checker.py  test_monitor_api.py  test_monitor_config.py  test_serialization.py
tests/fixtures/: api_fixtures.py  cli_fixtures.py  db_fixtures.py  k8s_fixtures.py
(+129 files in other folders)
