[tool.poetry]
name = "chutes-miner-repo"
version = "0.1.0"
description = "Chutes Miner monorepo"
authors = ["Kyle Widmann <kyle.widmann@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
chutes-miner = {path = "src/chutes-miner", develop = true}
graval-bootstrap = {path = "src/graval-bootstrap", develop = true}
chutes-miner-cli = {path = "src/chutes-miner-cli", develop = true}
chutes-agent = {path = "src/chutes-agent", develop = true}
chutes-monitor = {path = "src/chutes-monitor", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
ruff = "^0.12.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
