[tool.poetry]
name = "chutes-agent"
version = "0.1.0"
description = "Agent to monitor chutes in Chutes clusters"
authors = ["Kyle Widmann <kyle.widmann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "^0.115.4"
pydantic-settings = "^2.10.1"
uvicorn = "^0.32.0"
py-bip39-bindings = "^0.1.11"
click = ">8.1.0,<8.2.0"
loguru = "^0.7.3"
chutes-common = {path = "../chutes-common", develop = true}
tenacity = "^9.1.2"
pydantic = ">2.3,<3.0"
aiohttp = ">3.10.10,<4.0.0"
kubernetes-asyncio = "^32.3.2"
kubernetes = "^31.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
pytest-mock = "^3.14.1"
pytest-cov = "^6.2.1"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
