[project]
name = "chutes-common"
version = "0.1.0"
description = "Common library for Chutes Miner"
authors = [
    {name = "Kyle Widmann",email = "kyle.widmann@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"

[tool.poetry.dependencies]
orjson = "^3.10.18"
loguru = "^0.7.3"
fastapi = "^0.115.4"
substrate-interface = "^1.7.11"
pydantic-settings = "^2.10.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
