[project]
name = "chutes-miner-gpu"
version = "0.1.0"
description = "Chutes components for GPU worker nodes"
authors = [
    {name = "Kyle Widmann",email = "kyle.widmann@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
chutes-common = {path = "../chutes-common"}
fastapi = "^0.115.4"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
