[tool.poetry]
name = "graval-bootstrap"
version = "0.1.2"
description = "chutes.ai miner -- graval bootstrapper"
authors = ["Jon Durbin <jon@jondurbin.com>", "namoray <namoray@rayonlabs.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
substrate-interface = "^1.7.11"
py-bip39-bindings = "^0.1.11"
graval = "0.1.2"
aiohttp = "^3.12.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.2"
wheel = "^0.45.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
